# wedgetail-tester-tt-ihp26a

./: .gitignore  .slingshot.toml  .spiceinit  README.md  art_gds2lef.fish  info.yaml  magic_gds2lef.tcl  main.py  make_art.py  pyproject.toml  taskfile.yaml  xyce.sh
.github/workflows/: gds.yaml
art/: logo.xcf
docs/: info.md  regmap.md
macros/: wedgetail_logo.gds  wedgetail_logo.lef
regmap/: wedgetail_spi.rdl
rtl/: wedgetail_spi_rf.sv
scripts/: peakrdl_verilog.py
spice/: data.spiceraw  rosc_ngspice.spice
src/: config.json  dpll.v  inv_en_ihp130.sv  lfsr.sv  logo.sv  programmable_ring_osc_ihp130.sv  project.sv  project.v  ring_osc_ihp130.sv  spi_decoder.sv  spi_decoder_pkg.sv  wedgetail_spi_rf.sv  wedgetail_top.sv
test/: Makefile  tb.sv  tb.v  test.py
