[project]
name = "wedgetail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "cocotb>=2.0.1",
    "gdspy>=1.6.13",
    "gnuplotpy3>=0.0.3",
    "go-task-bin>=3.48.0",
    "klayout>=0.30.5",
    "klayout-pex>=0.3.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "peakrdl>=1.5.0",
    "peakrdl-markdown>=1.0.3",
    "peakrdl-sv",
    "peakrdl-verilog",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "spicelib>=1.4.9",
    "xdot>=1.6",
]

[tool.uv.sources]
peakrdl-verilog = { git = "https://github.com/SiliconPlatformsLab/PeakRDL-verilog", rev = "SPL_main" }
peakrdl-sv = { git = "https://github.com/nuquantum/peakrdl-sv" }

[tool.basedpyright]
typeCheckingMode = "standard"
